2005-11-22  Josh Roberson <josh@asteriasgi.com>

	* apps/app_voicemail.c: Remove "yay!" message.  (issue #5829)

2005-11-21  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_cut.c: remove unnecessary include that causes spurious rebuilding

	* channels/chan_sip.c (build_peer): ensure that case changes made to peer names are not ignored during reload operations
	(build_peer): when a peer is changed from dynamic to static mode, reset the default port number if no other has been specified

	* channels/chan_iax2.c (build_peer and build_user): ensure that case changes made to peer/user names are not ignored during reload operations
	(build_peer): when a peer is changed from dynamic to static mode, reset the default port number if no other has been specified

2005-11-21  Josh Roberson <josh@asteriasgi.com>

	* Makefile: Re-fix Darwin poll issues. 

2005-11-21  Russell Bryant  <russell@digium.com>

	* apps/app_osplookup.c: Properly populate the number of results. (issue #5789)

	* Makefile: Don't hard-code that poll functionality needs to be provided on Darwin.
	* apps/Makefile: Fix incorrect portion of the patch to fix 'make install' on Solaris.

	* channels/chan_iax2.c (iax2_getpeername): Return non-zero to indicate that a peer was found when using realtime (issue #5815)

2005-11-20  Russell Bryant  <russell@digium.com>

	* Makefile apps/Makefile: Fix 'make install' for Solaris. (issue #5775)

	* apps/app_record.c: Don't leak a frame if writing it to the file fails. (issue #5787)

	* Makefile: Create the monitor spool directory when the other spool directories are created.

	* pbx.c.c: Remove some useless checks and unnecessary calls to ast_strlen_zero(). (issue #5805)

	* cli.c: Remove some unnecessary calls to ast_strlen_zero(). (issue #5804)

	* channels/chan_oss.c configs/oss.conf.sample: Add the ability to set callerid in oss.conf. 
